--- a/app/src/main/res/layout/fragment_weather_detail.xml
+++ b/app/src/main/res/layout/fragment_weather_detail.xml
@@ -18,6 +18,17 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/cityName"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:gravity="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+            tools:text="San Jose" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -28,16 +39,15 @@
 
 
             <ImageView
-                android:contentDescription="@string/weather_condition"
                 android:id="@+id/weatherIcon"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
+                android:contentDescription="@string/weather_condition"
                 android:minHeight="56dp"
                 android:minWidth="56dp"
-                android:scaleType="fitCenter"
-                tools:src="@drawable/test_icon" />
+                android:scaleType="fitCenter" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -54,15 +64,16 @@
                     android:textColor="@android:color/white"
                     tools:text="25c" />
 
+                <!--Update when vectorDrawables support TextViews -->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:contentDescription="@string/weather_condition"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:contentDescription="@string/weather_condition"
                         android:paddingRight="@dimen/spacing_normal"
                         app:srcCompat="@drawable/ic_water_percent" />
 
