--- a/app/src/main/res/layout-w600dp/content_home.xml
+++ b/app/src/main/res/layout-w600dp/content_home.xml
@@ -1,32 +1,23 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
     android:baselineAligned="false"
-    android:divider="?android:attr/dividerHorizontal"
-    android:orientation="horizontal"
-    android:showDividers="middle"
-    tools:context="com.charlie.weatherapp.ui.HomeActivity">
-
-    <android.support.v7.widget.RecyclerView
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/recyclerView"
-        android:name="com.charlie.weatherapp.ui.ItemListFragment"
-        android:layout_width="@dimen/item_width"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        app:layoutManager="LinearLayoutManager"
-        tools:context="com.charlie.weatherapp.ui.HomeActivity"
-        tools:listitem="@layout/weather_card" />
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
 
     <FrameLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="0.5">
+
+        <include layout="@layout/city_list_panel" />
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_gravity="center"
         android:id="@+id/detailContainer"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="3" />
-
+        android:layout_weight="0.5" />
 </LinearLayout>
+
